test/libsolidity/syntaxTests/constants/file_level_memory.sol
uint[] memory constant x = 2;
// ----
// ParserError 2314: (7-13='memory'): Expected identifier but got 'memory'
